# study-bot

./: .env  .gitignore  FRONTEND_INTEGRATION.md  README.md  auth.py  database.py  main.py  models.py  pyproject.toml  schemas.py
backend/: .gitignore  auth.py  database.py  main.py  models.py  pyproject.toml  requirements.txt  schemas.py
frontend/: UI_DESIGN.md
frontend/index/: index.css  index.html  index.js
frontend/js/: auth.js
frontend/login/: login.css  login.html  login.js  signup.html  signup.js
frontend/myflashcards/: myflashcards.css  myflashcards.html  myflashcards.js
frontend/study/: study.css  study.html  study.js
